# pixel-game

./: CMakeLists.txt
client/: CMakeLists.txt
client/src/: main.cpp
server/: CMakeLists.txt
server/src/: main.c
